k8s/pod.yml
apiVersion: v1
kind: Pod
metadata:
  name:
spec:
  selector:
    matchLabels:
      app:
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.14.2
        ports:
        - containerPort: 80
