k8s/hello-kubernetes-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: hello-kubernetes-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: hw1.remotedevjobs.org
    http:
      paths:
      - backend:
          serviceName: hello-kubernetes-first
          servicePort: 80
